<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Submit">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:layout_marginBottom="636dp"
        android:background="#4F80C0"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="GAME SHOP"
            android:textSize="34sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="401dp"
        android:layout_height="92dp"
        android:background="#AFD7F6"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-4dp"
        tools:layout_editor_absoluteY="296dp">

        <EditText
            android:id="@+id/surname"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#FFFFFF"
            android:drawablePadding="8dp"
            android:hint="@string/surname"
            android:inputType="textPassword"
            android:padding="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="399dp"
        android:layout_height="100dp"
        android:background="#AFD7F6"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-4dp"
        tools:layout_editor_absoluteY="382dp">

        <EditText
            android:id="@+id/phone"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#FFFFFF"
            android:drawablePadding="8dp"
            android:hint="@string/phone_number"
            android:padding="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="401dp"
        android:layout_height="102dp"
        android:background="#AFD7F6"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-4dp"
        tools:layout_editor_absoluteY="473dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#FFFFFF"
            android:drawablePadding="8dp"
            android:hint="@string/email"
            android:inputType="textPassword"
            android:padding="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="592dp"
        android:background="#AFD7F6"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="สั่งซื้อสินค้า"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="397dp"
        android:layout_height="84dp"
        android:background="#AFD7F6"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-4dp"
        tools:layout_editor_absoluteY="212dp">

        <EditText
            android:id="@+id/name"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#FFFFFF"
            android:drawablePadding="8dp"
            android:hint="@string/Name"
            android:padding="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginBottom="140dp"
        android:background="#FFFAFA"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent">>

        <Button
            android:id="@+id/button6"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="ถัดไป" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>